--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -7,6 +7,8 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <title><%= title %>></title>
 </head>
+
+<%- include('nav', {user: undefined}) %>
 <body>
   <h1>Sign Up</h1>
   <form action="" method="POST">
