--- a/views/join-club.ejs
+++ b/views/join-club.ejs
@@ -5,21 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title><%= title %></title>
 </head>
 
 <%- include('nav', {user: user}) %>
 <body>    
   <% if (user) {%>
-    <h1>WELCOME BACK <%= user.username %></h1>
-    <a href="/messages/join">Join Club</a>
+    <h1>WELCOME <%= user.username %>, type in the secret passcode to join the club</h1>
+    <form action="./join" method="POST">
+      <label for="passcode">Pass Code:</label>
+      <input name="passcode" placeholder="enter the passcode" type="text" />
+      <button>Enter</button>
+    </form>
     <a href="/users/log-out">LOG OUT</a>
   <% } else { %>
-    <h1><%= title %></h1>
-    <p>Create an account or log in to access <%= title %></p>
+    <h1>please log in or sign up to join the club</h1>
     <a href="/users/log-in">Log-In</a>
     <a href="/users/sign-up">Sign-Up</a>
   <%}%>
-
 </body>
 </html>
