--- a/views/message-board.ejs
+++ b/views/message-board.ejs
@@ -6,9 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
+
+<%- include('nav', {user: user}) %>
 <body>    
-  <% if (user) {%>
-    <h1>WELCOME BACK <%= user.username %> to the message board</h1>
+  <% if (user && verified) {%>
+    <h1>WELCOME <%= user.username %> to the message board verified</h1>
+    <a href="/users/log-out">LOG OUT</a>
+  <% } else if (user) {%>
+    <h1>WELCOME <%= user.username %>, join the club by entering the secret passcode.</h1>
+    <a href="/messages/join">join club</a>
     <a href="/users/log-out">LOG OUT</a>
   <% } else { %>
     <h1>please log in to access message board</h1>
