--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -10,17 +10,19 @@
 
 <%- include('nav', {user: undefined}) %>
 <body>
-  <h1>Sign Up</h1>
-  <form action="" method="POST">
-    <label for="firstname">First Name</label>
-    <input name="firstname" placeholder="first name" type="text" />
-    <label for="lastname">Last Name</label>
-    <input name="lastname" placeholder="last name" type="text" />
-    <label for="username">Username</label>
-    <input name="username" placeholder="username" type="email" />
-    <label for="password">Password</label>
-    <input name="password" placeholder="password"" type="password" />
-    <button>Sign Up</button>
-  </form>
+  <section>
+    <h1>Sign Up</h1>
+    <form action="" method="POST">
+      <label for="firstname">First Name</label>
+      <input name="firstname" placeholder="first name" type="text" />
+      <label for="lastname">Last Name</label>
+      <input name="lastname" placeholder="last name" type="text" />
+      <label for="username">Username</label>
+      <input name="username" placeholder="username" type="email" />
+      <label for="password">Password</label>
+      <input name="password" placeholder="password"" type="password" />
+      <button>Sign Up</button>
+    </form>
+  </section>
 </body>
 </html>
