added validation and sanitization for forms

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
   <section>
     <% if (user) {%>
       <h1><%= title %></h1>
-      <h1>Welcome back <%= user.firstName %> <%= user.lastName %></h1>
+      <h1>Welcome <%= user.firstName %> <%= user.lastName %></h1>
       <p>Task Guide:</p>
       <ol>
         <li>Sign up for an account</li>
