--- a/views/clubhouse_form.ejs
+++ b/views/clubhouse_form.ejs
@@ -11,6 +11,13 @@
 <%- include('nav', {user: user}) %>
 <body>
   <section>
+    <% if (errors) { %>
+      <ul>
+        <% for (let error of errors) { %>
+        <li><%- error.msg %></li>
+        <% } %>
+      </ul>
+    <% } %>
     <h1><%= title %></h1>
     <form action="" method="POST">
       <label for="message">Message</label>
